# pyxls

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meson.build  meson.options  pyproject.toml
.github/workflows/: python-publish.yml  release-on-tag.yml  sphinx-build.yml
docs/: Makefile  api_overview.md  conf.py  getting_started.md  index.rst  install.md
src/include/xls/public/: c_api.h  c_api_dslx.h  c_api_format_preference.h  c_api_impl_helpers.h  c_api_ir_analysis.h  c_api_ir_builder.h  c_api_vast.h
src/source/: _c_api.cpp  _c_api.h  _dslx.cpp  _dslx.h  _dummy.cpp  _helpers.h  _ir_builder.cpp  _ir_builder.h  _raw.cpp  _types.h  _vast.cpp  _vast.h
src/xls/: __init__.py  _version.py.in  _wrap.py  c_api.py  dslx.py  ir_builder.py  vast.py
tests/: conftest.py  test_batch.py  test_c_api.py  test_ir_builder.py  test_vast.py  test_wrap.py
tools/: gen_stubs.py  gitversion.py
